welcome.lessons.welcome.bat.bool1.LoneTeen.scala.error
loneTeen:2: error: not found: value c
    if ((a<= 19 && a >=13) && !(b<= 19 && b>=13) && !(c<= 19 && c>=13)){return true}
                                                      ^loneTeen:2: error: not found: value c
    if ((a<= 19 && a >=13) && !(b<= 19 && b>=13) && !(c<= 19 && c>=13)){return true}
                                                                ^loneTeen:3: error: not found: value c
  	else if(!(a<= 19 && a >=13) && (b<= 19 && b>=13) && !(c<= 19 && c>=13)){return true}
                                                              ^loneTeen:3: error: not found: value c
  	else if(!(a<= 19 && a >=13) && (b<= 19 && b>=13) && !(c<= 19 && c>=13)){return true}
                                                                        ^loneTeen:4: error: not found: value c
  	else if (!(a<= 19 && a >=13) && !(b<= 19 && b>=13) && (c<= 19 && c>=13)){return true}
                                                               ^loneTeen:4: error: not found: value c
  	else if (!(a<= 19 && a >=13) && !(b<= 19 && b>=13) && (c<= 19 && c>=13)){return true}
                                                                         ^